--- a/Front/My-App/src/renderer/src/assets/main.css
+++ b/Front/My-App/src/renderer/src/assets/main.css
@@ -1,13 +1,9 @@
 @import './base.css';
 
 body {
+  width: 100%;
+  height: 100%;
   display: flex;
-  align-items: center;
-  justify-content: center;
-  overflow: hidden;
-  background-image: url('./wavy-lines.svg');
-  background-size: cover;
-  user-select: none;
 }
 
 code {
@@ -27,11 +23,10 @@ code {
 }
 
 #root {
+  width: 100%;
   display: flex;
-  align-items: center;
+  flex-direction: row;
   justify-content: center;
-  flex-direction: column;
-  margin-bottom: 80px;
 }
 
 .logo {
@@ -117,7 +112,7 @@ code {
 }
 
 .versions {
-  position: absolute;
+  /* position: flex; */
   bottom: 30px;
   margin: 0 auto;
   padding: 15px 0;
@@ -140,24 +135,5 @@ code {
   opacity: 0.8;
   &:last-child {
     border: none;
-  }
-}
-
-@media (max-width: 720px) {
-  .text {
-    font-size: 20px;
-  }
-}
-
-@media (max-width: 620px) {
-  .versions {
-    display: none;
-  }
-}
-
-@media (max-width: 350px) {
-  .tip,
-  .actions {
-    display: none;
   }
 }
