page loginRegister : fontion login

--- a/Front/My-App/src/renderer/src/components/block-jeux/block-jeux.css
+++ b/Front/My-App/src/renderer/src/components/block-jeux/block-jeux.css
@@ -15,6 +15,12 @@
     background-color: var(--ev-c-gray-1);
     margin: 5%;
     border-radius: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.imgBlock img {
+    width: 50%;
 }
 
 .blockJeux h2 {
